Add API endpoint for Helm exporter tool
Related to: sstarcher/helm-exporter#66
